# campaign-analysis-gr

./: README.md  campaign_performance.xlsx  notebook.ipynb  pyproject.toml
