[tool.poetry]
name = "campaign-analysis-gr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.0"
numpy = "^2.3.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
